--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,15 +1,16 @@
 .page {
   font-family: "Inter", sans-serif;
-
-  /* font smoothing */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  /* text size adjust to maintain proportionality */
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-
-  /* apply kerning/ligatures to improve legibility (slows performance) */
   text-rendering: optimizeLegibility;
+
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: #2a2c2f;
+
+  height: 100vh; /* temporary for preventing my eye burn */
+  width: 100vw; /* temporary for preventing my eye burn */
 }
