--- a/pages/index.css
+++ b/pages/index.css
@@ -5,9 +5,16 @@
 
 /* blocks */
 @import url("../blocks/page/page.css");
+@import url("../blocks/logo/logo.css");
+@import url("../blocks/lead/lead.css");
+
+
 /* blocks */
 
 /* elements */
+@import url("../blocks/lead/__title/lead__title.css");
+@import url("../blocks/lead/__subtitle/lead__subtitle.css");
+@import url("../blocks/lead/__image/lead__image.css");
 
 /* elements */
 
