add intro section

--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,8 @@
 .lead__subtitle {
-    max-width: 720px;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 36px;
-    margin: 0 auto 64px;
+  max-width: 720px;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.2;
+  margin: 0 auto 64px;
+  text-align: center;
 }
