--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,5 +1,7 @@
 .logo {
-    width: 270px;
-    height: 70px;
-    margin-top: 34px;
+  width: 270px;
+  height: 70px;
+  margin: auto;
+  padding-top: 34px;
+  display: block;
 }
