--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,9 +7,9 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #2a2c2f;
-  text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
+  box-sizing: border-box;
 }
