--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
 @import url("../blocks/page/page.css");
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/lead/lead.css");
-
+@import url("../blocks/intro/intro.css");
 
 /* blocks */
 
@@ -15,6 +15,11 @@
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__image/lead__image.css");
+@import url("../blocks/intro/__cite/intro__cite.css");
+@import url("../blocks/intro/__content/intro__content.css");
+@import url("../blocks/intro/__quote/intro__quote.css");
+@import url("../blocks/intro/__text/intro__text.css");
+@import url("../blocks/intro/__title/intro__title.css");
 
 /* elements */
 
