--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,9 @@
   margin-bottom: 118px;
   margin-left: calc((100% - 984px) / 2);
 }
+
+@media screen and (max-width: 984px) {
+  .intro {
+    margin-left: 24px;
+  }
+}
