--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,7 @@
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/intro/intro.css");
-
+@import url("../blocks/photo-grid/photo-grid.css");
 /* blocks */
 
 /* elements */
@@ -20,7 +20,9 @@
 @import url("../blocks/intro/__quote/intro__quote.css");
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__title/intro__title.css");
-
+@import url("../blocks/photo-grid/__list/photo-grid__list.css");
+@import url("../blocks/photo-grid/__item/photo-grid__item.css");
+@import url("../blocks/photo-grid/__image/photo-grid__image.css");
 /* elements */
 
 /* modifiers */
