--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,8 @@
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/intro/intro.css");
 @import url("../blocks/photo-grid/photo-grid.css");
+@import url("../blocks/places/places.css");
+@import url("../blocks/place/place.css");
 /* blocks */
 
 /* elements */
@@ -23,6 +25,18 @@
 @import url("../blocks/photo-grid/__list/photo-grid__list.css");
 @import url("../blocks/photo-grid/__item/photo-grid__item.css");
 @import url("../blocks/photo-grid/__image/photo-grid__image.css");
+@import url("../blocks/places/__list/places__list.css");
+@import url("../blocks/place/__title/place__title.css");
+@import url("../blocks/place/__country/place__country.css");
+@import url("../blocks/place/__website/place__website.css");
+@import url("../blocks/place/__person-role/place__person-role.css");
+@import url("../blocks/place/__person-info/place__person-info.css");
+@import url("../blocks/place/__media-container/place__media-container.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__nft-frame/place__nft-frame.css");
+@import url("../blocks/place/__nft-link/place__nft-link.css");
+@import url("../blocks/place/__description/place__description.css");
+@import url("../blocks/place/__paragraph/place__paragraph.css");
 /* elements */
 
 /* modifiers */
