--- a/blocks/place/__nft-link/place__nft-link.css
+++ b/blocks/place/__nft-link/place__nft-link.css
@@ -2,4 +2,20 @@
   display: inline-block;
   text-decoration: none;
   color: inherit;
+  background: #0278fe;
+  width: 248px;
+  border-radius: 4px;
+  padding: 13px 20px;
+  text-align: center;
+  box-sizing: border-box;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.21;
+}
+
+@media screen and (max-width: 320px) {
+  .place__nft-link {
+    width: 288px;
+    height: 48px;
+  }
 }
