fix media queries for all sections fix content spill at some resolutions correct styling across all sections

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,11 @@
   max-width: 100%;
   margin: auto;
 }
+
+/* TEMPORARY FOR MEDIA QUERY ON DEVTOOLS REMOVE OR IGNORE PLEASE */
+@media screen and (max-width: 1280px) {
+  .lead__image {
+    width: 984px;
+  }
+}
+/* TEMPORARY FOR MEDIA QUERY ON DEVTOOLS REMOVE OR IGNORE PLEASE */
