--- a/blocks/place/__media-container/place__media-container.css
+++ b/blocks/place/__media-container/place__media-container.css
@@ -2,3 +2,15 @@
   grid-area: media;
   max-width: 460px;
 }
+
+@media screen and (max-width: 768px) {
+  .place__media-container {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__media-container {
+    max-width: 320px;
+  }
+}
