--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,3 +10,18 @@
     margin-right: 24px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .intro {
+    margin-top: 88px;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    margin-top: 64px;
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+}
