--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,19 @@
   margin: 0 auto 64px;
   text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    max-width: calc(100% - (24px * 2));
+    margin-bottom: 36px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    max-width: calc(100% - (16px * 2));
+    font-size: 16px;
+    line-height: 1.25;
+    margin-bottom: 40px;
+  }
+}
