--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,3 +6,16 @@
   line-height: 1.04;
   text-align: center;
 }
+
+/* @media screen and (max-width: 768px) {
+  .lead__title {
+  }
+} */
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    margin-top: 50px;
+  }
+}
