--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -5,3 +5,10 @@
   padding-top: 34px;
   display: block;
 }
+
+@media screen and (max-width: 320px) {
+  .logo {
+    width: 200px;
+    height: 51.85px;
+  }
+}
