--- a/blocks/place/__nft-link/place__nft-link.css
+++ b/blocks/place/__nft-link/place__nft-link.css
@@ -11,11 +11,14 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.21;
+  margin-top: 48px;
 }
 
 @media screen and (max-width: 320px) {
   .place__nft-link {
     width: 288px;
     height: 48px;
+    display: block;
+    margin: 30px auto 0;
   }
 }
