--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,6 @@
 .place {
+  box-sizing: border-box;
+  margin-top: 80px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 48px 40px;
@@ -6,4 +8,18 @@
   grid-template-areas:
     "title website"
     "media description";
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    margin-top: 72px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+  }
 }
