--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,5 @@
 .places {
+  box-sizing: border-box;
   margin: 92px calc((100% - 984px) / 2);
 }
 
@@ -6,5 +7,18 @@
   .places {
     margin-left: 24px;
     margin-right: 24px;
+  }
+}
+
+/* @media screen and (max-width: 768px) {
+    .places {
+      margin-left: 24px;
+      margin-right: 24px;
+    }
+  } */
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 0;
   }
 }
