--- a/blocks/buy-button/buy-button.css
+++ b/blocks/buy-button/buy-button.css
@@ -1,9 +1,8 @@
-.place__nft-link {
+.buy-button {
   display: inline-block;
   text-decoration: none;
   color: inherit;
   background: #0278fe;
-  width: 248px;
   border-radius: 4px;
   padding: 13px 20px;
   text-align: center;
@@ -11,14 +10,4 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.21;
-  margin-top: 48px;
-}
-
-@media screen and (max-width: 320px) {
-  .place__nft-link {
-    width: 288px;
-    height: 48px;
-    display: block;
-    margin: 30px auto 0;
-  }
 }
