--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,6 +5,9 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 768px) {
