--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,11 +3,13 @@
   margin-top: 80px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 3fr 1fr;
   gap: 48px 40px;
 
   grid-template-areas:
     "title website"
-    "media description";
+    "media description"
+    "link description";
 }
 
 @media screen and (max-width: 768px) {
