--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,8 @@
 @import url("../blocks/photo-grid/photo-grid.css");
 @import url("../blocks/places/places.css");
 @import url("../blocks/place/place.css");
+@import url("../blocks/buy-button/buy-button.css");
+@import url("../blocks/cover/cover.css");
 /* blocks */
 
 /* elements */
@@ -36,8 +38,12 @@
 @import url("../blocks/place/__nft-link/place__nft-link.css");
 @import url("../blocks/place/__description/place__description.css");
 @import url("../blocks/place/__paragraph/place__paragraph.css");
+@import url("../blocks/cover/__overlay/cover__overlay.css");
+@import url("../blocks/cover/__subtitle/cover__subtitle.css");
+@import url("../blocks/cover/__title/cover__title.css");
 /* elements */
 
 /* modifiers */
-
+@import url("../blocks/buy-button/_place/buy-button_place_places.css");
+@import url("../blocks/buy-button/_place/buy-button_place_cover.css");
 /* modifiers */
