--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,14 +15,14 @@
 @media screen and (max-width: 768px) {
   .place {
     margin-top: 72px;
+    gap: 46px 28px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .place {
     margin-top: 50px;
-    /* display: flex;
-    flex-direction: column; */
+    gap: 30px 0;
     grid-template-columns: 1fr;
     grid-template-areas:
       "title"
