--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,2 +1,16 @@
 .cover__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #2a2c2f;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.cover:hover .cover__overlay {
+  opacity: 0.8;
+}
+
+.buy-button_place_cover:hover + .cover__overlay {
+  opacity: 0.8;
 }
