--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url("../blocks/place/place.css");
 @import url("../blocks/buy-button/buy-button.css");
 @import url("../blocks/cover/cover.css");
+@import url("../blocks/footer/footer.css");
 /* blocks */
 
 /* elements */
@@ -41,6 +42,7 @@
 @import url("../blocks/cover/__overlay/cover__overlay.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
 @import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
 /* elements */
 
 /* modifiers */
