correct margins all around

--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,10 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
+@media screen and (max-width: 320px) {
+  .place__website {
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+}
