--- a/blocks/buy-button/_place/buy-button_place_places-link.css
+++ b/blocks/buy-button/_place/buy-button_place_places-link.css
@@ -6,5 +6,7 @@
 @media screen and (max-width: 320px) {
   .buy-button_place_places-link {
     display: block;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
