--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -14,3 +14,10 @@
   align-items: center;
   position: relative;
 }
+
+@media screen and (max-width: 320px) {
+  .cover {
+    background-size: cover;
+    height: 254px;
+  }
+}
