--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,15 +7,17 @@
   text-align: center;
 }
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .lead__title {
+    margin: 90px 24px 32px;
   }
-} */
+}
 
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
     line-height: 1.1;
     margin-top: 50px;
+    margin-bottom: 16px;
   }
 }
