--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,2 +1,18 @@
 .photo-grid {
+  max-width: 1184px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
