--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,3 +1,10 @@
 .place__description {
   grid-area: description;
 }
+
+@media screen and (max-width: 320px) {
+  .place__description {
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+}
