--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,15 +10,14 @@
   }
 }
 
-/* @media screen and (max-width: 768px) {
-    .places {
-      margin-left: 24px;
-      margin-right: 24px;
-    }
-  } */
+@media screen and (max-width: 768px) {
+  .places {
+    margin-top: 88px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .places {
-    margin: 0;
+    margin: 62px 0 0;
   }
 }
