remove BRs in cover subtitle change to 3 paragraphs instead

--- a/blocks/buy-button/_place/buy-button_place_cover.css
+++ b/blocks/buy-button/_place/buy-button_place_cover.css
@@ -2,5 +2,11 @@
   width: 137px;
   height: 48px;
   z-index: 1;
-  margin: 0;
+  margin: 32px 0 0;
+}
+
+@media screen and (max-width: 320px) {
+  .buy-button_place_cover {
+    margin-top: 16px;
+  }
 }
