--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-  margin: 32px 0;
+  margin: 0;
   max-width: 280px;
   text-align: center;
   font-weight: normal;
@@ -12,6 +12,5 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
-    margin: 16px 0;
   }
 }
