--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-  margin: 0;
+  margin: 0 0 32px;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 320px) {
   .cover__title {
+    margin-bottom: 16px;
     font-size: 32px;
     line-height: 1.09;
   }
