--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,6 +8,13 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 560px) {
+  .cover__subtitle {
+    font-size: 16px;
+    line-height: 1.18;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     font-size: 14px;
