add custom 560px breakpoint fixes

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -18,9 +18,8 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 560px) {
   .place {
-    margin-top: 50px;
     gap: 30px 0;
     grid-template-columns: 1fr;
     grid-template-areas:
@@ -29,5 +28,11 @@
       "media"
       "description"
       "link";
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    margin-top: 50px;
   }
 }
