--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,14 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 560px) {
+  .cover__title {
+    margin-bottom: 24px;
+    font-size: 52px;
+    line-height: 1.07;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__title {
     margin-bottom: 16px;
