--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -15,9 +15,16 @@
   position: relative;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 560px) {
   .cover {
     background-size: cover;
     height: 254px;
   }
 }
+
+/* @media screen and (max-width: 320px) {
+  .cover {
+    background-size: cover;
+    height: 254px;
+  }
+} */
