--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,6 +6,13 @@
   margin: 0 0 40px;
 }
 
+@media screen and (max-width: 560px) {
+  .intro__title {
+    font-size: 45px;
+    line-height: 1.08;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .intro__title {
     font-size: 32px;
