--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -13,6 +13,12 @@
   }
 }
 
+@media screen and (max-width: 560px) {
+  .lead__title {
+    font-size: 50px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
