--- a/blocks/buy-button/_place/buy-button_place_places.css
+++ b/blocks/buy-button/_place/buy-button_place_places.css
@@ -1,12 +1,11 @@
 .buy-button_place_places {
-  width: 248px;
+  max-width: 248px;
   max-height: 48px;
 }
 
 @media screen and (max-width: 320px) {
   .buy-button_place_places {
-    width: 288px;
-    height: 48px;
+    max-width: 288px;
     display: block;
     margin: 0 auto 0;
   }
