--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,6 +1,4 @@
 .logo {
-  width: 270px;
-  height: 70px;
   margin: auto;
   padding-top: 34px;
   display: block;
@@ -9,7 +7,6 @@
 @media screen and (max-width: 320px) {
   .logo {
     padding-top: 20px;
-    width: 200px;
-    height: 51.85px;
+    max-width: 200px;
   }
 }
