--- a/blocks/place/__country/place__country.css
+++ b/blocks/place/__country/place__country.css
@@ -8,8 +8,8 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+/* @media screen and (max-width: 320px) {
   .place__country {
     display: inline;
   }
-}
+} */
