--- a/blocks/buy-button/buy-button.css
+++ b/blocks/buy-button/buy-button.css
@@ -7,7 +7,7 @@
   padding: 13px 20px;
   text-align: center;
   box-sizing: border-box;
-  font-weight: normal;
+  font-weight: 600;
   font-size: 18px;
   line-height: 1.21;
   transition: background-color 0.6s;
