--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   /* dealing with background responsiveness */
-  height: calc(100vw * 0.625); /* original image height/width ratio multiplied by current viewport width */
-  max-height: 740px;
+  min-height: calc(100vw * 0.625); /* original image height/width ratio multiplied by current viewport width */
+  /* min-height: 740px; */
   max-width: 1184px;
   margin: 92px auto 0;
   background: url("../../images/cover-green-field.jpg") no-repeat center;
@@ -28,3 +28,7 @@
     height: 254px;
   }
 } */
+
+.cover:hover .cover__overlay {
+  opacity: 0.8;
+}
