--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   box-sizing: border-box;
-  margin-top: 32px;
+  margin-top: 80px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 48px 40px;
@@ -21,18 +21,21 @@
 @media screen and (max-width: 560px) {
   .place {
     gap: 30px 0;
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr;
     grid-template-areas:
       "title"
       "website"
       "media"
       "description"
-      "link";
+      "link"; */
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
   }
 }
 
-@media screen and (max-width: 320px) {
+/* @media screen and (max-width: 320px) {
   .place {
     margin-top: 50px;
   }
-}
+} */
