--- a/blocks/buy-button/_place/buy-button_place_places.css
+++ b/blocks/buy-button/_place/buy-button_place_places.css
@@ -3,6 +3,12 @@
   max-height: 48px;
 }
 
+@media screen and (max-width: 590px) {
+  .buy-button_place_places {
+    padding: 13px 13px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .buy-button_place_places {
     max-width: 288px;
