--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,10 @@
 .cover {
-  /* dealing with background responsiveness */
-  /* min-height: calc(100vw * 0.625); original image height/width ratio multiplied by current viewport width */
   min-height: 740px;
+  /* aspect-ratio: 16 / 9; */
   max-width: 1184px;
   margin: 92px auto 0;
   background: url("../../images/cover-green-field.jpg") no-repeat center;
   background-size: cover;
-  /* dealing with background responsiveness */
 
   display: flex;
   flex-direction: column;
