--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,7 @@
   margin-top: 80px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: min-content min-content 1fr;
   gap: 48px 40px;
 
   grid-template-areas:
@@ -21,21 +22,8 @@
 @media screen and (max-width: 560px) {
   .place {
     gap: 30px 0;
-    /* grid-template-columns: 1fr;
-    grid-template-areas:
-      "title"
-      "website"
-      "media"
-      "description"
-      "link"; */
     margin-top: 50px;
     display: flex;
     flex-direction: column;
   }
 }
-
-/* @media screen and (max-width: 320px) {
-  .place {
-    margin-top: 50px;
-  }
-} */
